syntax = "proto3";

package sec05;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.example.models.sec06";


message BalanceCheckRequest{
  int32 account_number = 1;
}

message AccountBalance{
  int32 account_number = 1;
  int32 balance = 2;
}
message AccountBalances{
  repeated AccountBalance accounts = 1;
}

message WithdrawRequest{
  int32 account_number = 1;
  int32 amount = 2;
}

message Money{
  int32 amount =1;
}

message DepositRequest{
  oneof request{
    int32 account_number = 1;
    Money money = 2;
  }
}

message TransferRequest{
  int32 from_account = 1;
  int32 to_account = 2;
  int32 amount = 3;
}

enum TransferStatus{
  REJECTED = 0;
  COMPLETED =1;
}

message TransferResponse{
  TransferStatus status = 1;
  AccountBalance from_account = 2;
  AccountBalance to_account = 3;
}


service BankService{
  //Unary
  rpc GetAccountBalance(BalanceCheckRequest) returns (AccountBalance);
  rpc GetAllAccounts(google.protobuf.Empty) returns (AccountBalances);


  //server streaming
  rpc Withdraw(WithdrawRequest) returns (stream Money);

  //client streaming
  rpc Deposit(stream DepositRequest) returns (AccountBalance);

}

service TransferService{
  rpc Transfer(stream TransferRequest) returns (stream TransferResponse);
}